applications/hello_new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ernie
  namespace: melton
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ernie2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ernie2
    spec:
      containers:
      - image: quay.io/redhattraining/hello-openshift
        imagePullPolicy: Always
        name: hello-openshift
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
