applications/hello.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"ernie:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ernie\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: ernie
      app.kubernetes.io/component: ernie
      app.kubernetes.io/instance: ernie
    name: ernie
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: ernie
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: ernie
      spec:
        containers:
        - image: ' '
          name: ernie
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8888
            protocol: TCP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: ernie
      app.kubernetes.io/component: ernie
      app.kubernetes.io/instance: ernie
    name: ernie
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
    - name: 8888-tcp
      port: 8888
    selector:
      deployment: ernie
kind: List
metadata: {}
