applications/ernie-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ernie
    app.kubernetes.io/component: ernie
    app.kubernetes.io/instance: ernie
  name: ernie
  namespace: czech
spec:
  host: ernie.apps.ocp4.example.com
  port:
    targetPort: 8080-tcp
  to:
    kind: ""
    name: ernie
    weight: null
